refactor: 파일 저장 형식 변경